--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Rock Paper Scissors Game</h1>
     <p>Click one of the following to play the game :)</p>
+    <div class="rules"><img src="https://static.vecteezy.com/system/resources/previews/000/833/573/non_2x/rock-paper-scissors-hand-game-rules-design-vector.jpg" alt=""></div>
+    <br>
     <button class="play" onclick="
         let randomChoice = Math.floor(Math.random() * 3 + 1);
         let computerChoiceText;
