--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
+    <title>Rock P aper Scissors</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,6 +18,7 @@
         <button class="play" onclick="paperClicked()">✋🏻 Paper</button>
     
         <button class="play" onclick="scissorsClicked()">✌🏻 Scissors</button>
+        <button class="reset" onclick="resetScore( )"> RESET</button>
         </div>
     <br>
     <h4 id="choice"></h4>
