--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <br>
-    <h4 id="choice"></h4>
+    <h4 id="choice">Result will appear here!</h4>
     <br>
     <div class="resetButton">
     <button class="reset" onclick="resetScore( )"> RESET</button>
