--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Rock Paper Scissors Game</h1>
-    <h3 id="score">No games played yet!</h3>
+    <h3 id="score"></h3>
     <p>Click one of the following to play the game :)</p>
     <div id="main">
         <div class="rules"><img src="https://static.vecteezy.com/system/resources/previews/000/833/573/non_2x/rock-paper-scissors-hand-game-rules-design-vector.jpg" alt=""></div>
@@ -22,7 +22,7 @@
         </div>
     </div>
     <br>
-    <h4 id="choice">Result will appear here!</h4>
+    <h4 id="choice"></h4>
     <br>
     <div class="resetButton">
     <button class="reset" onclick="resetScore( )"> RESET</button>
